# fake

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  default.nix  fake.cabal
fake/: default.nix
fake/src/: Fake.hs
fake/src/Fake/: Types.hs  Utils.hs
fake/src/Fake/Provider/: UserAgent.hs
fake/src/Fake/Provider/Address/: EN_US.hs
fake/src/Fake/Provider/IdNumber/: EN_US.hs
fake/src/Fake/Provider/Person/: EN_US.hs
fake/src/Fake/Provider/PhoneNumber/: EN_US.hs
lang/en/: adverbs.txt  basic-nouns.txt  verbs.txt
src/: Fake.hs
src/Fake/: Class.hs  Combinators.hs  Cover.hs  Lang.hs  Types.hs  Utils.hs
src/Fake/Lang/: EN.hs
src/Fake/Provider/: DateTime.hs  Lang.hs  Locale.hs  UserAgent.hs
src/Fake/Provider/IdNumber/: EN_US.hs
src/Fake/Provider/Lang/: EN_US.hs
src/Fake/Provider/Person/: EN_US.hs
src/Fake/Provider/PhoneNumber/: EN_US.hs
test/: Main.hs
