name:                fake
version:             0.1.1.3
synopsis:            Randomly generated fake data
description:         QuickCheck generates completely random data for the
                     purposes of test and catching corner cases.  The fake
                     package provides tools for generating data that looks
                     plausibly real.
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardsley, Formation Inc.
homepage:            https://github.com/mightybyte/fake
bug-reports:         https://github.com/mightybyte/fake/issues
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.2

extra-source-files:
  default.nix
  README.md

Source-repository head
  Type:     git
  Location: https://github.com/mightybyte/fake.git

library
  exposed-modules:
    Fake
    Fake.Class
    Fake.Combinators
    Fake.Cover
    Fake.Provider.Address.EN_US
    Fake.Provider.DateTime
    Fake.Provider.IdNumber.EN_US
    Fake.Provider.Lang
    Fake.Provider.Lang.EN_US
    Fake.Provider.Locale
    Fake.Provider.Person.EN_US
    Fake.Provider.PhoneNumber.EN_US
    Fake.Provider.UserAgent
    Fake.Utils

  other-modules:    Fake.Types

  build-depends:
    base         >= 4.6 && < 4.14,
    containers   >= 0.5 && < 0.7,
    generics-sop >= 0.2 && < 0.6,
    random       >= 1.1 && < 1.2,
    text         >= 1.2 && < 1.3,
    time         >= 1.4 && < 1.10

  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test, src
  other-modules:
    Fake.Class
    Fake.Combinators
    Fake.Cover
    Fake.Provider.Lang
    Fake.Provider.Person.EN_US
    Fake.Types

  build-depends:
    base,
    hspec >= 2.4 && < 2.8,
    random,
    text,
    time
  ghc-options: -Wall -threaded -fno-warn-partial-type-signatures
  default-language:    Haskell2010
